# winzy-macos-reminder

./: README.md  pyproject.toml
tests/: test_winzy_macos_reminder.py
winzy_macos_reminder/: __init__.py
