[project]
name = "winzy-macos-reminder"
version = "0.0.3"
description = "Create reminers in macos in cli"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
    "dateutils",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-macos-reminder"
Changelog = "https://github.com/sukhbinder/winzy-macos-reminder/releases"
Issues = "https://github.com/sukhbinder/winzy-macos-reminder/issues"
CI = "https://github.com/sukhbinder/winzy-macos-reminder/actions"

[project.entry-points."winzy.plugins"]
remind = "winzy_macos_reminder:remind_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
